fix minor layout issues on course box

--- a/themes/default/static/css/less/components/course-box.less
+++ b/themes/default/static/css/less/components/course-box.less
@@ -5,7 +5,6 @@
     margin-top: 40px;
     .course {
       margin-bottom: 40px;
-      min-height: 195px;
       position: relative;
       &:hover {
         .fa-check {
@@ -142,6 +141,7 @@
             font-family: 'Questrial';
             line-height: 3;
             .transition(all 0.25s ease);
+            overflow: hidden;
             a {
               color: #fff;
               display: block;
@@ -166,6 +166,9 @@
     }
 }
 #courses-page{
+    .course {
+      min-height: 195px;
+    }
     .mouseover, .thumb {
         .border-left-radius(@border-radius-base);
     }
